# collaspi

./: .gitignore  README.md  log.netlist  pre_processed_netlist.sp  pyproject.toml
collaspi.dist/: libffi.8.dylib  libgcc_s.1.1.dylib  libgfortran.5.dylib  libpython3.10.dylib  libsf_error_state.dylib  libssl.3.dylib  libtcl8.6.dylib  libtiff.6.dylib  libtk8.6.dylib  libwebp.7.dylib  libwebpdemux.2.dylib  libwebpmux.3.dylib  libxcb.1.1.0.dylib
data/: output.pex.netlist  testrcc.pex.netlist
src/collaspi/: __init__.py
