[project]
name = "collaspi"
version = "0.1.76"
description = "Speed up Post-(Extracted) Layout simulations with Collaspi! Speed up by lumping adjacent parasitic cap/resistors together into a T-model RC-wire for netlist reduction."
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "das-dias", email = "das.dias6@gmail.com" }
]
keywords = [
    'post-layout',
    'acceleration',
    'simulation',
    'eda'
]

requires-python = ">=3.10"
dependencies = [
    "docopt>=0.6.2",
    "networkx>=3.4.2",
    "pathlib>=1.0.1",
    "regex>=2024.11.6",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/das-dias/collaspi"
Repository = "https://github.com/das-dias/collaspi"
Issues = "https://github.com/das-dias/collaspi/issues"
Documentation = "https://github.com/das-dias/collaspi"

[project.optional-dependencies]
githubpyspice = [
    #"PySpice @ git+https://github.com/PySpice-org/PySpice.git@master"
    "PySpice @ git+https://github.com/das-dias/PySpice.git@master"
]

[project.scripts]
cspi = "collaspi:main"
collaspi = "collaspi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
sources = ["src"]

#[dependency-groups]
#dev = [
#    "nuitka>=2.7.7",
#]
